--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="newsFeed"></div>
 
     <script>
-        const apiKey = "aef5d7ae749041de83f9d2285166f961"; // Вставь свой ключ NewsAPI сюда
+        const apiKey = aef5d7ae749041de83f9d2285166f961 // Вставь свой ключ NewsAPI сюда
 
         async function fetchNews() {
             try {
